# mysql-governor

./: .gitignore  1.patch  CMakeLists.txt  Makefile  README.md  build.sh  clean.sh  copyright_ignore  db-governor.xml  db-governor.xml.example  db_governor.service  db_governor.spec  db_governor_ubuntu.service  governor-mysql-0.8.tar.bz2  governor-mysql-0.9.tar.bz2  governor-mysql-1.0.tar.bz2  governor_package_limit.json  log.patch  run_checkers.sh  sonar-project.properties  var-lve-dbgovernor\x2dshm.mount
cmake/: FindLibXml2.cmake  FindMySQL.cmake
copyright/: README.TXT  README.md  add_copyright.sh  copyright.py  extract_authors_to_csv.py  file_authors.csv  substitute_authors_with_csv.py
cron/: lvedbgovernor-utils-cron
debian/: changelog  conffiles  control  copyright  governor-mysql-dev.install  governor-mysql.install  governor-mysql.links  postinst  postrm  preinst  prerm  rules  templates
debian/patches/: CLOS-1926.patch  series
debian/source/: gen_version.sh  lvedbgovernor-utils-cron
install/: Makefile.in  chk-mysqlclient  cl-mysql.repo.default  configure.ac  copy_directory.py  create-htaccess.py  creates_individual_limits_vector_list.py  db-select-mysql  db-update.py  dbctl  exec_command.py  governor_dropin_fix.py  governor_package_limitting.py  install-mysql.py  list_problem_files.txt  lve_diagnostic.py  migrate.sh  mysql_lib.py  mysqlgovernor.py  mysqlgovernor_ubuntu.py  remove-mysqlclient  utilities.py
install/cpanel/: check_mysql_leave_pid.sh  cloudlinux.versions  cpanel-common-lve  cpanel-delete-hooks  cpanel-install-hooks  db_governor-clear-old-hook  fix-db-governor  fix-db-governor.sh  install-db-governor  install-db-governor-beta  install-db-governor-stable  install-db-governor-uninstall  install-db-governor-version  install-db-governor.sh  install-mysql-disabler.sh  upgrade-mysql-disabler.sh
install/da/: dbgovernor_map.py  install-db-governor-beta.sh  install-db-governor-version.sh  install-db-governor.sh
install/ispmanager/: install-db-governor-beta.sh  install-db-governor.sh
install/iworx/: install-db-governor-beta.sh  install-db-governor.sh
install/modules/: __init__.py  base.py  base_ubuntu.py  cpanel.py  da.py  ispmanager.py  iworx.py  plesk.py  storage.py
install/other/: install-db-governor-beta.sh  install-db-governor-version.sh  install-db-governor.sh  set_fs_suid_dumpable.sh
install/plesk/: install-db-governor-beta.sh  install-db-governor.sh
install/scripts/: chek_mysql_rpms_local  cl-transition-job.sh  cpanel-common-lve  cpanel-delete-hooks  cpanel-install-hooks  cpanel-map-mysql-user.py  cpanel-mysql-url-detect.pm  cpanel_map_rebuilder  dbgovernor_map  dbgovernor_map.py  dbgovernor_map_plesk.py  detect-cpanel-mysql-version.pm  map_hook  mysql_hook  mysql_hooks  mysql_py_hook  mysqld.service  set_cpanel_mysql_version.pm  sync_hook
install/systemd/: governor.conf  governor.conf.cl7  governor.sh
install/utils/: check_mysql_leave_pid_other.sh  cloudlinux.versions  db_install_common.sh  dbgovernor  dbgovernor_map  debug-mysql.sh  mysql_export
logrotate/: mysql-governor  mysql-governor.logs
mysql/MariaDB/: mariadb.10.0.11.spec  mariadb.10.0.13-9.spec  mariadb.10.0.14-11.spec  mariadb.10.1.1-2.spec  mariadb.5.5.38-4.spec  mariadb.5.5.38.spec  mariadb_new_concept_10_0_20.patch  max_connection2_mariadb_10_0_11_b406.patch  max_connection2_mariadb_10_0_11_b407.patch  max_connection2_mariadb_10_0_11_b408.patch  max_connection2_mariadb_10_0_13_b409.patch  max_connection2_mariadb_10_1_1_b409.patch  max_connection2_mariadb_10_1_1_b410.patch  max_connection2_mariadb_10_1_2_b410.patch  max_connection2_mariadb_5_5_30_b402.patch  max_connection2_mariadb_5_5_30_b404.patch  max_connection2_mariadb_5_5_30_b405.patch  max_connection2_mariadb_5_5_31_b406.patch  max_connection2_mariadb_5_5_34_b406.patch  max_connection2_mariadb_5_5_34_b408.patch  max_connection2_mariadb_5_5_34_b409.patch  max_connection2_mariadb_5_5_34_b410.patch  max_connection2_mariadb_5_5_34_b411.patch  max_connection2_mariadb_5_5_40_b413.patch  max_connection2_mariadb_5_5_40_b414.patch  max_connection2_mariadb_5_5_41_b413.patch
mysql/MySQL-5.0/: max_connection2_mysql_5_0_95_b201.1.patch  max_connection2_mysql_5_0_95_b201.2.patch  max_connection2_mysql_5_0_95_b201.3.patch  max_connection2_mysql_5_0_95_b305.1.patch  max_connection2_mysql_5_0_95_b400.1.patch  max_connection2_mysql_5_0_95_b400.2.patch  max_connection2_mysql_5_0_95_b400.3.patch  max_connection2_mysql_5_0_95_b400.4.patch  max_connection2_mysql_clean_5_0_95_b18.patch  max_connection2_mysql_clean_5_0_95_b21.patch  mysql.init  mysql.spec  userstatv2.patch
mysql/MySQL-5.1/: mysql.init  mysql.spec  (+15 more)
script/: db_governor  governor.conf  mysql
src/: calc_stats.c  calc_stats.h  commands.c  commands.h  data.h  dbctl.c  dbctl_cfg.c  dbctl_cfg.h  dbctl_conn.c  dbctl_conn.h  dbctl_list.c  dbctl_list.h  dbctl_rest.c  dbctl_rest.h  dbctl_set.c  dbctl_set.h  dbgovernor_string_functions.c  dbgovernor_string_functions.h  dbtop.c  dbtop_server.c  dbtop_server.h  dbuser_map.c  dbuser_map.h  dlload.c  dlload.h  ezxml.c  ezxml.h  fifo_stats.c  fifo_stats.h  getsysinfo.c  getsysinfo.h  governor.c  governor_config.c  governor_config.h  governor_server.c  governor_server.h  governor_write_data.c  governor_write_data.h  help.h  ld.c  (+30 more)
tests/: BUILD.txt  db-governor.xml.test  emulator.c  fifo_test.c  gstack_analyzer.php  libtest.c  lock_testing.c  log_test.c  preparation.sh  put_in_lve_lock_enter.c  put_in_lve_test.c  put_in_lve_test_glib2.c  queriesCPU.sh  queriesREADWRITE.sh  shared_test.c  simple_mysql_emulator.c  slow_query_test.c  stats_test.c  tid_tbl_test.c  tid_tbl_test2.c
tests/Klee/: CMakeLists.txt
tests/Klee/mock/: libxml2.c  uri.c  xmlstring.c
tests/Klee/scripts/: ansible.cfg  opennebula.yml  run_suites.py  tests_deploy.sh
tests/Klee/scripts/roles/opennebula_actions/tasks/: main.yml
tests/Klee/suites/: .gitignore  CMakeLists.txt  fifo_stats_avg_test.c  fifo_stats_foreach_test.c  fifo_stats_free_test.c  fifo_stats_init_test.c  fifo_stats_push_test.c  fifo_stats_sum_test.c  xml_parse_test.c  xml_release_test.c
(+83 files in other folders)
